# Automated-flood-extent-mapping

./: .pre-commit-config.yaml  README.md  Readme_nvidia_sentinel_one.md  pyproject.toml
.github/workflows/: main.yml
data/: .gitignore
notebooks/: explore_example_data_prithvi.ipynb  run_nvidia_sentinel_one.ipynb  score_flood_predictions.ipynb  visualise_flood_predictions.ipynb
notebooks/sentinelhub_tutorial/: README.md  data_download_process_request.ipynb
src/flood_mapping/: download_data.py  download_hyp3.py  nvidia_inference.py  utils.py
