[tool.poetry]
name = "automated-flood-extent-mapping"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = [{ include = "flood_mapping", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
rasterio = "^1.3.9"
matplotlib = "^3.8.1"
sentinelhub = "^3.9.2"
numpy = "^1.26.1"
pandas = "^2.1.2"
geopandas = "^0.14.0"
python-dotenv = "^1.0.0"
torch = "2.1.2"
torchvision = "0.16.2"
imutils = "^0.5.4"
ttach = "^0.0.3"
segmentation-models-pytorch = { git = "https://github.com/qubvel/segmentation_models.pytorch" }
opencv-python = "^4.9.0.80"
ipywidgets = "^8.1.1"
plotly = "^5.18.0"
pyarrow = "^15.0.0"
pydensecrf = { git = "https://github.com/lucasb-eyer/pydensecrf.git" }
ray = "^2.9.2"
scikit-learn = "^1.4.0"
scikit-image = "^0.22.0"
cython = "^3.0.8"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"
pre-commit = "^3.5.0"
ruff = "0.3.4"        # should be same as in .pre-commit-config.yaml

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 110
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "B", "I", "N"]
ignore = ["E402", "E501"]
